# netSecAudit

./: .env  LICENSE  README.md  app.py  create_tables.py  init_db.py  init_db_minimal.py  network_config.json  pyproject.toml  seed_data.py  utils.py
components/: device_discovery.py  network_widgets.py  security_widgets.py  system_widgets.py
data/: mock_generator.py
database/: __init__.py  db_utils.py  init_data.py  models.py
pages/: 0_Configuration.py  1_Security_Events.py  2_Network_Traffic.py  3_System_Performance.py  4_Network_Topology.py  5_Device_Inventory.py  6_Incident_Response.py
utils/: network_scanner.py
